trunk/Archive2/ce/ec5592f4d6fcb4/output
main.cpp: In function 'int main()':
main.cpp:37:35: error: conversion from 'Range<int>' to non-scalar type 'Range<const int>' requested
     Range<const int> const_copy = range; // error!
                                   ^
